--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<button id="lateTaskMask" class="btn btn-danger my-4 fa fa-minus-square">Hide late tasks</button>
 					
 					<div class="box-body">
-					<i>Cochez une t&acirc;che pour la compl&eacute;ter.</i>
+					<i>Check a task to complete it.</i>
 					<ul id="taskList">
 						
 					</ul>
