--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<div id="loginForm">
 		<div class="d-flex align-items-center justify-content-center text-center">
 			<div class="col-11 col-md-9 col-lg-7">
+				<h1>Welcome to your To Do List !</h1>
 				<h3 id="enter">Start by entering your name ...</h3>
 				<form action="#">
 					<input type="text" class="form-control" id="name" placeholder="Name">
